# Slowcontrol_OLD

./: .gitignore  CMakeLists.txt  LICENSE  README.md
com/I2C/: soft_i2c.cpp  soft_i2c.h
conf/: Slowcontrol.json  Weight.json
source/: .cpp  BME280.cpp  CMakeLists.txt  GasSlowcontrol.cpp  LabSlowcontrol.cpp  Slowcontrol.cpp  Weight.cpp
source/BME280/: CMakeLists.txt
source/BME280/include/: BME280.h
source/BME280/src/: BME280.cpp
source/Slowcontrol/: CMakeLists.txt  Slowcontrol.cpp
source/Slowcontrol/include/: Value.h
source/Slowcontrol/src/: Value.cpp
source/include/: ConfigReader.hpp  Database.hpp  Parameters.h  Value.h
source/src/: ConfigReader.cpp  Value.cpp
systemd/: slowcontrolGas.service  slowcontrolLab.service  weight.service
